# nand-flash-emulator

./: .ruby-gemset  .travis.yml  CMakeLists.txt  Gemfile  Guardfile  LICENSE  README.md
cmake/: install_target.cmake
src/: nfe.c  nfe.h  nfe_test.c  nfe_types.h
test/: main.c  test_nfe.h
